# tiralabra-2022

./: .gitignore  README.md  generate_midi.py  index.py  midi.py  output.mid  pyproject.toml  requirements.txt  test.mid  test2.mid  test3.mid
Trie/: trie_node.py
docs/: d_145eef247bfb46b6_index_py.html  d_55be0913591eebf1_trie_node_py.html  d_55be0913591eebf1_trie_py.html  d_a44f0ac069e85531_test_generate_from_midi_py.html  d_a44f0ac069e85531_test_trie_py.html  d_a44f0ac069e85531_test_write_midi_to_disk_py.html  index.html  status.json
dokumentaatio/: käyttöohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5  viikkoraportti6.md
src/: generate_midi.py  index.py  index2.py  output.mid
src/Trie/: trie.py
tests/: test_generate_from_midi.py  test_trie.py  test_write_midi_to_disk.py
