[tool.poetry]
name = "tiralabra-2022"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tiralabra_2022"}]

[tool.poetry.dependencies]
python = "^3.8"
librosa = "^0.9.2"
MIDIUtil = "^1.2.1"
mido = "^1.2.10"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
